Ignoring everything in .idea

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,5 @@ $RECYCLE.BIN/
 
 _NCrunch*
 .idea/.idea.Image Organizer \[C Sharp Port\].dir/.idea/workspace.xml
+
+.idea/.idea.Image Organizer \[C Sharp Port\].dir/.idea/
